--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@
 streamlit
 
 # LangChain ecosystem
-langchain
-langchain-core
-langchain-community
-langchain-experimental
+langchain>=0.1.0
+langchain-core>=0.1.0
+langchain-community>=0.0.20
+langchain-experimental>=0.0.47
 langchain-text-splitters
 langsmith
 
