Add google-generativeai package to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ langgraph-checkpoint
 
 # Google + OpenAI integrations
 langchain-google-genai
+google-generativeai
 openai
 
 # Environment + utilities
